tests/baselines/reference/sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues(target=es2015).errors.txt
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(8,5): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(9,5): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(10,5): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(12,5): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(13,5): error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts(15,5): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringVariableStatementArrayBindingPatternDefaultValues.ts (6 errors) ====
    declare var console: {
        log(msg: string): void;
    }
    type Robot = [number, string, string];
    var robotA: Robot = [1, "mower", "mowing"];
    var robotB: Robot = [2, "trimmer", "trimming"];
    
    let [, nameA = "noName"] = robotA;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [numberB = -1] = robotB;
        ~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [numberA2 = -1, nameA2 = "noName", skillA2 = "noSkill"] = robotA;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    let [numberC2 = -1] = [3, "edging", "Trimming edges"];
        ~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    let [numberC = -1, nameC = "noName", skillC = "noSkill"] = [3, "edging", "Trimming edges"];
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[number, string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    let [numberA3 = -1, ...robotAInfo] = robotA;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
    
    if (nameA == nameA2) {
        console.log(skillA2);
    }